--- a/html-css/module-04/index.html
+++ b/html-css/module-04/index.html
@@ -13,7 +13,7 @@
     <div class="container">
       <header class="navigation clearfix">
         <div class="navigation_logo">
-          <a href="#"><span>m</span>art</a>
+          <a href="#">mart</a>
         </div>
         <nav class="navigation_menu">
           <ul class="clearfix">
@@ -36,7 +36,7 @@
             <a href="#"><img src="./img/heel.png" alt="heel"/></a>
             <div class="box_bline">
               <a href="#">Blue Tshirt</a>
-              <div class="box_square">$26</div>
+              <div class="box_cost">$26</div>
             </div>
           </li>
 
@@ -44,7 +44,7 @@
             <a href="#"><img src="./img/watch.png" alt="heel"/></a>
             <div class="box_bline">
               <a href="#">Woman Shirt</a>
-              <div class="box_square">$31</div>
+              <div class="box_cost">$31</div>
             </div>
           </li>
 
@@ -52,7 +52,7 @@
             <a href="#"><img src="./img/hat.png" alt="heel"/></a>
             <div class="box_bline">
               <a href="#">Yellow Tshirt</a>
-              <div class="box_square">$21</div>
+              <div class="box_cost">$21</div>
             </div>
           </li>
 
@@ -60,7 +60,7 @@
             <a href="#"><img src="./img/bag.png" alt="heel"/></a>
             <div class="box_bline">
               <a href="#">Cool Lingerie</a>
-              <div class="box_square">$56</div>
+              <div class="box_cost">$56</div>
             </div>
           </li>
 
@@ -68,7 +68,7 @@
             <a href="#"><img src="./img/bag2.png" alt="heel"/></a>
             <div class="box_bline">
               <a href="#">Blue Tshirt</a>
-              <div class="box_square">$26</div>
+              <div class="box_cost">$26</div>
             </div>
           </li>
 
@@ -76,7 +76,7 @@
             <a href="#"><img src="./img/strap.png" alt="heel"/></a>
             <div class="box_bline">
               <a href="#">Woman Shirt</a>
-              <div class="box_square">$31</div>
+              <div class="box_cost">$31</div>
             </div>
           </li>
 
@@ -84,7 +84,7 @@
             <a href="#"><img src="./img/shoes.png" alt="heel"/></a>
             <div class="box_bline">
               <a href="#">Yellow Tshirt</a>
-              <div class="box_square">$21</div>
+              <div class="box_cost">$21</div>
             </div>
           </li>
 
@@ -92,7 +92,7 @@
             <a href="#"><img src="./img/glasses.png" alt="heel"/></a>
             <div class="box_bline">
               <a href="#">Cool Lingerie</a>
-              <div class="box_square">$56</div>
+              <div class="box_cost">$56</div>
             </div>
           </li>
         </ul>
