--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -9,7 +9,7 @@
     <title>module-05</title>
   </head>
   <body>
-    <header class="container_header">
+    <header class="container">
       <nav class="navigation clearfix">
         <div class="logo"><a href="#">mart</a></div>
         <ul class="menu">
@@ -22,5 +22,17 @@
         </ul>
       </nav>
     </header>
+
+    <div class="slider_wrap">
+      <div class="slider">
+        <div class="slide1"></div>
+        <div class="slider-text">
+          <p>AFFORDABLE PARIS TOURS</p>
+          <p>CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
+        </div>
+        <button type="button"></button>
+        <button type="button"></button>
+      </div>
+    </div>
   </body>
 </html>
