--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -34,5 +34,37 @@
         <button type="button"></button>
       </div>
     </div>
+
+    <div class="main">
+      <div class="container">
+        <p class="headline">new collection</p>
+        <div class="products">
+          <ul>
+            <li class="box-item">
+              <a href="#"
+                ><img src="./img/item1.png" alt="" />
+                <div class="box-card">
+                  <div class="box-card-items">
+                    <ul>
+                      <li><img src="./img/heart.png" alt="" /></li>
+                      <li><img src="./img/arrows.png" alt="" /></li>
+                      <li><img src="./img/clock.png" alt="" /></li>
+                      <li><img src="./img/basket.png" alt="" />add to cart</li>
+                    </ul>
+                  </div>
+                </div></a
+              >
+              <div class="box-rectangle">
+                <a href="#">blue tshirt</a>
+                <div class="box-cost">$26</div>
+              </div>
+            </li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
