--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -25,9 +25,8 @@
 
     <div class="slider_wrap">
       <div class="slider">
-        <div class="slide1"></div>
         <div class="slider-text">
-          <p>AFFORDABLE PARIS TOURS</p>
+          <h2>AFFORDABLE PARIS TOURS</h2>
           <p>CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
         </div>
         <button type="button"></button>
@@ -46,10 +45,13 @@
                 <div class="box-card">
                   <div class="box-card-items">
                     <ul>
-                      <li><img src="./img/heart.png" alt="" /></li>
-                      <li><img src="./img/arrows.png" alt="" /></li>
-                      <li><img src="./img/clock.png" alt="" /></li>
-                      <li><img src="./img/basket.png" alt="" />add to cart</li>
+                      <li class="icon"><img src="./img/heart.png" alt="" /></li>
+                      <li class="icon"><img src="./img/arrows.png" alt="" /></li>
+                      <li class="icon"><img src="./img/clock.png" alt="" /></li>
+                      <li class="basket">
+                        <img src="./img/basket.png" alt="" />
+                        <span>add to cart</span>
+                      </li>
                     </ul>
                   </div>
                 </div></a
