--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -9,9 +9,12 @@
     <title>module-05</title>
   </head>
   <body>
+    <!-- Logo and Navigation -->
     <header class="container">
       <nav class="navigation clearfix">
+        <!-- Logo -->
         <div class="logo"><a href="#">mart</a></div>
+        <!-- Navigation -->
         <ul class="menu">
           <li><a href="#">home</a></li>
           <li><a href="#">aboute us</a></li>
@@ -22,7 +25,7 @@
         </ul>
       </nav>
     </header>
-
+    <!-- Static slider -->
     <div class="slider_wrap">
       <div class="slider">
         <div class="slider-text">
@@ -33,40 +36,111 @@
         <button type="button"></button>
       </div>
     </div>
-
+    <!-- Main content -->
     <div class="main">
       <div class="container">
         <p class="headline">new collection</p>
         <div class="products">
           <ul>
+            <!-- box-item1 -->
             <li class="box-item">
-              <a href="#"
-                ><img src="./img/item1.png" alt="" />
-                <div class="box-card">
-                  <div class="box-card-items">
+              <div class="box-img">
+                <img src="./img/item1.png" alt="" />
+                <div class="box-shadow">
+                  <div class="box-shadow-items clearfix">
                     <ul>
-                      <li class="icon"><img src="./img/heart.png" alt="" /></li>
-                      <li class="icon"><img src="./img/arrows.png" alt="" /></li>
-                      <li class="icon"><img src="./img/clock.png" alt="" /></li>
-                      <li class="basket">
-                        <img src="./img/basket.png" alt="" />
-                        <span>add to cart</span>
-                      </li>
+                      <li class="icon"><i class="heart"></i></li>
+                      <li class="icon"><i class="arrows"></i></li>
+                      <li class="icon"><i class="clock"></i></li>
                     </ul>
+                    <button type="button">
+                      <i class="icon_basket"></i>
+                      <span>add to cart</span>
+                    </button>
                   </div>
-                </div></a
-              >
+                </div>
+              </div>
               <div class="box-rectangle">
                 <a href="#">blue tshirt</a>
                 <div class="box-cost">$26</div>
               </div>
             </li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <!-- box-item2 -->
+            <li class="box-item">
+              <div class="box-img">
+                <img src="./img/item2.png" alt="" />
+                <div class="box-shadow">
+                  <div class="box-shadow-items clearfix">
+                    <ul>
+                      <li class="icon"><i class="heart"></i></li>
+                      <li class="icon"><i class="arrows"></i></li>
+                      <li class="icon"><i class="clock"></i></li>
+                    </ul>
+                    <button type="button">
+                      <i class="icon_basket"></i>
+                      <span>add to cart</span>
+                    </button>
+                  </div>
+                </div>
+              </div>
+              <div class="box-rectangle">
+                <a href="#">woman shirt</a>
+                <div class="box-cost">$31</div>
+              </div>
+            </li>
+            <!-- box-item3 -->
+            <li class="box-item">
+              <div class="box-img">
+                <img src="./img/item3.png" alt="" />
+                <div class="box-shadow">
+                  <div class="box-shadow-items clearfix">
+                    <ul>
+                      <li class="icon"><i class="heart"></i></li>
+                      <li class="icon"><i class="arrows"></i></li>
+                      <li class="icon"><i class="clock"></i></li>
+                    </ul>
+                    <button type="button">
+                      <i class="icon_basket"></i>
+                      <span>add to cart</span>
+                    </button>
+                  </div>
+                </div>
+              </div>
+              <div class="box-rectangle">
+                <a href="#">yellow tshirt</a>
+                <div class="box-cost">$21</div>
+              </div>
+            </li>
+            <!-- box-item4 -->
+            <li class="box-item">
+              <div class="box-img">
+                <img src="./img/item4.png" alt="" />
+                <div class="box-shadow">
+                  <div class="box-shadow-items clearfix">
+                    <ul>
+                      <li class="icon"><i class="heart"></i></li>
+                      <li class="icon"><i class="arrows"></i></li>
+                      <li class="icon"><i class="clock"></i></li>
+                    </ul>
+                    <button type="button">
+                      <i class="icon_basket"></i>
+                      <span>add to cart</span>
+                    </button>
+                  </div>
+                </div>
+              </div>
+              <div class="box-rectangle">
+                <a href="#">cool lingerie</a>
+                <div class="box-cost">$56</div>
+              </div>
+            </li>
           </ul>
+          <!-- Footer content -->
         </div>
       </div>
     </div>
+    <footer>
+      <p class="container">All Rights Reserved © Dokan | Designed <span>ThemenGraph</span></p>
+    </footer>
   </body>
 </html>
