update footer styles

--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -140,7 +140,7 @@
       </div>
     </div>
     <footer>
-      <p class="container">All Rights Reserved © Dokan | Designed <span>ThemenGraph</span></p>
+      <p class="container">All Rights Reserved &copy; Dokan &#124; Designed <a href="#" target="_blank">ThemenGraph</a></p>
     </footer>
   </body>
 </html>
