--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -140,7 +140,12 @@
       </div>
     </div>
     <footer>
-      <p class="container">All Rights Reserved &copy; Dokan &#124; Designed <a href="#" target="_blank">ThemenGraph</a></p>
+      <div class="container">
+        <p>
+          All Rights Reserved &copy; Dokan &#124; Designed
+          <a href="#" target="_blank">ThemenGraph</a>
+        </p>
+      </div>
     </footer>
   </body>
 </html>
