style fixes on the cards

--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -48,15 +48,15 @@
                 <img src="./img/item1.png" alt="" />
                 <div class="box-shadow">
                   <div class="box-shadow-items clearfix">
-                    <ul>
-                      <li class="icon"><i class="heart"></i></li>
-                      <li class="icon"><i class="arrows"></i></li>
-                      <li class="icon"><i class="clock"></i></li>
-                    </ul>
-                    <button type="button">
-                      <i class="icon_basket"></i>
-                      <span>add to cart</span>
-                    </button>
+                    <div class="icon"><i class="heart"></i></div>
+                    <div class="icon"><i class="arrows"></i></div>
+                    <div class="icon"><i class="clock"></i></div>
+                    <div class="basket">
+                      <button type="button clearfix">
+                        <i class="icon_basket"></i>
+                        <span>add to cart</span>
+                      </button>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -71,15 +71,15 @@
                 <img src="./img/item2.png" alt="" />
                 <div class="box-shadow">
                   <div class="box-shadow-items clearfix">
-                    <ul>
-                      <li class="icon"><i class="heart"></i></li>
-                      <li class="icon"><i class="arrows"></i></li>
-                      <li class="icon"><i class="clock"></i></li>
-                    </ul>
-                    <button type="button">
-                      <i class="icon_basket"></i>
-                      <span>add to cart</span>
-                    </button>
+                    <div class="icon"><i class="heart"></i></div>
+                    <div class="icon"><i class="arrows"></i></div>
+                    <div class="icon"><i class="clock"></i></div>
+                    <div class="basket">
+                      <button type="button clearfix">
+                        <i class="icon_basket"></i>
+                        <span>add to cart</span>
+                      </button>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -94,15 +94,15 @@
                 <img src="./img/item3.png" alt="" />
                 <div class="box-shadow">
                   <div class="box-shadow-items clearfix">
-                    <ul>
-                      <li class="icon"><i class="heart"></i></li>
-                      <li class="icon"><i class="arrows"></i></li>
-                      <li class="icon"><i class="clock"></i></li>
-                    </ul>
-                    <button type="button">
-                      <i class="icon_basket"></i>
-                      <span>add to cart</span>
-                    </button>
+                    <div class="icon"><i class="heart"></i></div>
+                    <div class="icon"><i class="arrows"></i></div>
+                    <div class="icon"><i class="clock"></i></div>
+                    <div class="basket">
+                      <button type="button clearfix">
+                        <i class="icon_basket"></i>
+                        <span>add to cart</span>
+                      </button>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -117,15 +117,15 @@
                 <img src="./img/item4.png" alt="" />
                 <div class="box-shadow">
                   <div class="box-shadow-items clearfix">
-                    <ul>
-                      <li class="icon"><i class="heart"></i></li>
-                      <li class="icon"><i class="arrows"></i></li>
-                      <li class="icon"><i class="clock"></i></li>
-                    </ul>
-                    <button type="button">
-                      <i class="icon_basket"></i>
-                      <span>add to cart</span>
-                    </button>
+                    <div class="icon"><i class="heart"></i></div>
+                    <div class="icon"><i class="arrows"></i></div>
+                    <div class="icon"><i class="clock"></i></div>
+                    <div class="basket">
+                      <button type="button clearfix">
+                        <i class="icon_basket"></i>
+                        <span>add to cart</span>
+                      </button>
+                    </div>
                   </div>
                 </div>
               </div>
