--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -51,8 +51,8 @@
                     <div class="icon"><i class="heart"></i></div>
                     <div class="icon"><i class="arrows"></i></div>
                     <div class="icon"><i class="clock"></i></div>
-                    <div class="basket">
-                      <button type="button clearfix">
+                    <div class="basket clearfix">
+                      <button type="button">
                         <i class="icon_basket"></i>
                         <span>add to cart</span>
                       </button>
@@ -74,8 +74,8 @@
                     <div class="icon"><i class="heart"></i></div>
                     <div class="icon"><i class="arrows"></i></div>
                     <div class="icon"><i class="clock"></i></div>
-                    <div class="basket">
-                      <button type="button clearfix">
+                    <div class="basket clearfix">
+                      <button type="button">
                         <i class="icon_basket"></i>
                         <span>add to cart</span>
                       </button>
@@ -97,8 +97,8 @@
                     <div class="icon"><i class="heart"></i></div>
                     <div class="icon"><i class="arrows"></i></div>
                     <div class="icon"><i class="clock"></i></div>
-                    <div class="basket">
-                      <button type="button clearfix">
+                    <div class="basket clearfix">
+                      <button type="button">
                         <i class="icon_basket"></i>
                         <span>add to cart</span>
                       </button>
@@ -120,8 +120,8 @@
                     <div class="icon"><i class="heart"></i></div>
                     <div class="icon"><i class="arrows"></i></div>
                     <div class="icon"><i class="clock"></i></div>
-                    <div class="basket">
-                      <button type="button clearfix">
+                    <div class="basket clearfix">
+                      <button type="button">
                         <i class="icon_basket"></i>
                         <span>add to cart</span>
                       </button>
