--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -27,13 +27,13 @@
     </header>
     <!-- Static slider -->
     <div class="slider_wrap">
-      <div class="slider">
-        <div class="slider-text">
+      <div class="container">
+        <div class="slider_navigation">
           <h2>AFFORDABLE PARIS TOURS</h2>
           <p>CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
+          <button type="button"></button>
+          <button type="button"></button>
         </div>
-        <button type="button"></button>
-        <button type="button"></button>
       </div>
     </div>
     <!-- Main content -->
