--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -29,8 +29,10 @@
     <div class="slider_wrap">
       <div class="container">
         <div class="slider_navigation">
-          <h2>AFFORDABLE PARIS TOURS</h2>
-          <p>CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
+          <div class="slider_text">
+            <h2>AFFORDABLE PARIS TOURS</h2>
+            <p>CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
+          </div>
           <button type="button"></button>
           <button type="button"></button>
         </div>
