--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/norm.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>module-05</title>
   </head>
   <body>
     <!-- Logo and Navigation -->
     <header class="container">
-      <nav class="navigation clearfix">
+      <nav class="navigation">
         <!-- Logo -->
         <div class="logo"><a href="#">mart</a></div>
         <!-- Navigation -->
@@ -49,11 +49,11 @@
               <div class="box-img">
                 <img src="./img/item1.png" alt="" />
                 <div class="box-shadow">
-                  <div class="box-shadow-items clearfix">
+                  <div class="box-shadow-items">
                     <div class="icon"><i class="heart"></i></div>
                     <div class="icon"><i class="arrows"></i></div>
                     <div class="icon"><i class="clock"></i></div>
-                    <div class="basket clearfix">
+                    <div class="basket">
                       <button type="button">
                         <i class="icon_basket"></i>
                         <span>add to cart</span>
@@ -72,11 +72,11 @@
               <div class="box-img">
                 <img src="./img/item2.png" alt="" />
                 <div class="box-shadow">
-                  <div class="box-shadow-items clearfix">
+                  <div class="box-shadow-items">
                     <div class="icon"><i class="heart"></i></div>
                     <div class="icon"><i class="arrows"></i></div>
                     <div class="icon"><i class="clock"></i></div>
-                    <div class="basket clearfix">
+                    <div class="basket">
                       <button type="button">
                         <i class="icon_basket"></i>
                         <span>add to cart</span>
@@ -95,11 +95,11 @@
               <div class="box-img">
                 <img src="./img/item3.png" alt="" />
                 <div class="box-shadow">
-                  <div class="box-shadow-items clearfix">
+                  <div class="box-shadow-items">
                     <div class="icon"><i class="heart"></i></div>
                     <div class="icon"><i class="arrows"></i></div>
                     <div class="icon"><i class="clock"></i></div>
-                    <div class="basket clearfix">
+                    <div class="basket">
                       <button type="button">
                         <i class="icon_basket"></i>
                         <span>add to cart</span>
@@ -118,11 +118,11 @@
               <div class="box-img">
                 <img src="./img/item4.png" alt="" />
                 <div class="box-shadow">
-                  <div class="box-shadow-items clearfix">
+                  <div class="box-shadow-items">
                     <div class="icon"><i class="heart"></i></div>
                     <div class="icon"><i class="arrows"></i></div>
                     <div class="icon"><i class="clock"></i></div>
-                    <div class="basket clearfix">
+                    <div class="basket">
                       <button type="button">
                         <i class="icon_basket"></i>
                         <span>add to cart</span>
