--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./githome/css/reset.css" />
     <link rel="stylesheet" href="./githome/css/style.css" />
     <title>goit-fe-course</title>
   </head>
   <body>
-    <div id="header_wrap">
+    <header>
+      
+    </header>
+    <!-- <div id="header_wrap">
       <header>
         <a
           id="forkme_banner"
@@ -33,15 +37,21 @@
         </div>
         <div class="nav_wrap_list">
           <div class="nav_wrap_list_border">
-            <a href="https://maxtarasenko.github.io/goit-fe-course/html-css/module-03/">Module 3</a>
+            <a
+              href="https://maxtarasenko.github.io/goit-fe-course/html-css/module-03/"
+              >Module 3</a
+            >
           </div>
         </div>
         <div class="nav_wrap_list">
           <div class="nav_wrap_list_border">
-            <a href="https://maxtarasenko.github.io/goit-fe-course/html-css/module-04/">Module 4</a>
+            <a
+              href="https://maxtarasenko.github.io/goit-fe-course/html-css/module-04/"
+              >Module 4</a
+            >
           </div>
         </div>
       </nav>
-    </div>
+    </div> -->
   </body>
 </html>
