--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./css/norm.css" />
+    <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>module-05</title>
   </head>
   <body>
     <!-- Logo and Navigation -->
     <header class="container">
-      <nav class="navigation">
+      <nav class="navigation clearfix">
         <!-- Logo -->
         <div class="logo"><a href="#">mart</a></div>
         <!-- Navigation -->
@@ -47,7 +47,7 @@
             <!-- box-item1 -->
             <li class="box-item">
               <div class="box-img">
-                <img src="./img/item1.png" alt="" />
+                <img class="img-responsive" src="./img/item1.png" alt="" />
                 <div class="box-shadow">
                   <div class="box-shadow-items">
                     <div class="icon"><i class="heart"></i></div>
@@ -70,7 +70,7 @@
             <!-- box-item2 -->
             <li class="box-item">
               <div class="box-img">
-                <img src="./img/item2.png" alt="" />
+                <img class="img-responsive" src="./img/item2.png" alt="" />
                 <div class="box-shadow">
                   <div class="box-shadow-items">
                     <div class="icon"><i class="heart"></i></div>
@@ -93,7 +93,7 @@
             <!-- box-item3 -->
             <li class="box-item">
               <div class="box-img">
-                <img src="./img/item3.png" alt="" />
+                <img class="img-responsive" src="./img/item3.png" alt="" />
                 <div class="box-shadow">
                   <div class="box-shadow-items">
                     <div class="icon"><i class="heart"></i></div>
@@ -116,7 +116,7 @@
             <!-- box-item4 -->
             <li class="box-item">
               <div class="box-img">
-                <img src="./img/item4.png" alt="" />
+                <img class="img-responsive" src="./img/item4.png" alt="" />
                 <div class="box-shadow">
                   <div class="box-shadow-items">
                     <div class="icon"><i class="heart"></i></div>
