--- a/html-css/module-06/index.html
+++ b/html-css/module-06/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./css/myreset.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>module-06</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div class="container">
+      <header class="navigation">
+        <div class="logo"><a href="#">MoGo</a></div>
+        <nav class="menu">
+          <ul>
+            <li class="menu-item"><a href="#">about</a></li>
+            <li class="menu-item"><a href="#">service</a></li>
+            <li class="menu-item"><a href="#">work</a></li>
+            <li class="menu-item"><a href="#">blog</a></li>
+            <li class="menu-item"><a href="#">contact</a></li>
+          </ul>
+        </nav>
+      </header>
+    </div>
+  </body>
 </html>
