Update the GitHub Pages

--- a/index.html
+++ b/index.html
@@ -9,49 +9,68 @@
     <title>goit-fe-course</title>
   </head>
   <body>
-    <header>
-      
-    </header>
-    <!-- <div id="header_wrap">
-      <header>
-        <a
-          id="forkme_banner"
-          href="https://github.com/MaxTarasenko/goit-fe-course"
-          >View on GitHub</a
-        >
-        <a href="https://maxtarasenko.github.io/goit-fe-course/">
-          <img src="./githome/img/logo.png" alt="logo"
-        /></a>
-        <p>My GitHub Pages "goit-fe-course"</p>
+    <div class="container">
+      <header class="navigation">
+        <div class="logo">
+          <a href="https://maxtarasenko.github.io/goit-fe-course"
+            >GitHub <span>Pages</span></a
+          >
+          <hr>
+          <a href="https://github.com/MaxTarasenko/goit-fe-course">Git<span>Home</span></a>
+        </div>
+        <nav class="menu">
+          <ul class="menu_items">
+            <li>
+              <a
+                href="https://maxtarasenko.github.io/goit-fe-course/html-css/module-01/"
+                >Module 1-2</a
+              >
+              <hr>
+              <a href="https://github.com/MaxTarasenko/goit-fe-course/tree/master/html-css/module-01">Исходники</a>
+            </li>
+            <li>
+              <a
+                href="https://maxtarasenko.github.io/goit-fe-course/html-css/module-03/"
+                >Module 3</a
+              >
+              <hr>
+              <a href="https://github.com/MaxTarasenko/goit-fe-course/tree/master/html-css/module-03">Исходники</a>
+            </li>
+            <li>
+              <a
+                href="https://maxtarasenko.github.io/goit-fe-course/html-css/module-04/"
+                >Module 4</a
+              >
+              <hr>
+              <a href="https://github.com/MaxTarasenko/goit-fe-course/tree/master/html-css/module-04">Исходники</a>
+            </li>
+            <li>
+              <a
+                href="https://maxtarasenko.github.io/goit-fe-course/html-css/module-05/"
+                >Module 5</a
+              >
+              <hr>
+              <a href="https://github.com/MaxTarasenko/goit-fe-course/tree/master/html-css/module-05">Исходники</a>
+            </li>
+            <li>
+              <a
+                href="https://maxtarasenko.github.io/goit-fe-course/html-css/module-06/"
+                >Module 6</a
+              >
+              <hr>
+              <a href="https://github.com/MaxTarasenko/goit-fe-course/tree/master/html-css/module-06">Исходники</a>
+            </li>
+            <li>
+              <a
+                href="https://maxtarasenko.github.io/goit-fe-course/html-css/module-07/"
+                >Module 7</a
+              >
+              <hr>
+              <a href="https://github.com/MaxTarasenko/goit-fe-course/tree/master/html-css/module-07">Исходники</a>
+            </li>
+          </ul>
+        </nav>
       </header>
     </div>
-    <div id="nav_wrap">
-      <nav>
-        <div class="nav_wrap_list">
-          <div class="nav_wrap_list_border">
-            <a
-              href="https://maxtarasenko.github.io/goit-fe-course/html-css/module-01/"
-              >Module 1-2</a
-            >
-          </div>
-        </div>
-        <div class="nav_wrap_list">
-          <div class="nav_wrap_list_border">
-            <a
-              href="https://maxtarasenko.github.io/goit-fe-course/html-css/module-03/"
-              >Module 3</a
-            >
-          </div>
-        </div>
-        <div class="nav_wrap_list">
-          <div class="nav_wrap_list_border">
-            <a
-              href="https://maxtarasenko.github.io/goit-fe-course/html-css/module-04/"
-              >Module 4</a
-            >
-          </div>
-        </div>
-      </nav>
-    </div> -->
   </body>
 </html>
