--- a/html-css/module-06/index.html
+++ b/html-css/module-06/index.html
@@ -22,6 +22,10 @@
           </ul>
         </nav>
       </header>
+      <div class="headline">
+        <h3>We work with</h3>
+        <h2>Amazing Services</h2>
+      </div>
     </div>
   </body>
 </html>
