Add content and styles

--- a/html-css/module-06/index.html
+++ b/html-css/module-06/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./css/myreset.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/myreset.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>module-06</title>
   </head>
   <body>
@@ -25,6 +25,79 @@
       <div class="headline">
         <h3>We work with</h3>
         <h2>Amazing Services</h2>
+      </div>
+      <div class="services_wrap">
+        <ul class="services_items">
+          <li class="services-item">
+            <img src="./img/ALARM.png" alt="" />
+            <div class="services-item-text">
+              <h3>Photography</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor.
+              </p>
+            </div>
+          </li>
+          <li class="services-item">
+            <img src="./img/LINE GRAPH.png" alt="" />
+            <div class="services-item-text">
+              <h3>Web Design</h3>
+              <p>
+                Ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor.
+              </p>
+            </div>
+          </li>
+          <li class="services-item">
+            <img src="./img/COMPUTER _ OK.png" alt="" />
+            <div class="services-item-text">
+              <h3>Creativity</h3>
+              <p>
+                Dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                tempor.
+              </p>
+            </div>
+          </li>
+          <li class="services-item">
+            <img src="./img/BOOK 2.png" alt="" />
+            <div class="services-item-text">
+              <h3>seo</h3>
+              <p>
+                Ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod.
+              </p>
+            </div>
+          </li>
+          <li class="services-item">
+            <img src="./img/HOME.png" alt="" />
+            <div class="services-item-text">
+              <h3>Css/Html</h3>
+              <p>
+                Lorem dolor sit amet, consectetur adipiscing elit, sed do
+                tempor.
+              </p>
+            </div>
+          </li>
+          <li class="services-item">
+            <img src="./img/IMAGE.png" alt="" />
+            <div class="services-item-text">
+              <h3>digital</h3>
+              <p>
+                Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+              </p>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div class="headline">
+        <h3>Who we are</h3>
+        <h2>Meet our team</h2>
+      </div>
+      <div class="headline-text">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat.
       </div>
     </div>
   </body>
