Added content, styles and fixes

--- a/html-css/module-06/index.html
+++ b/html-css/module-06/index.html
@@ -23,8 +23,7 @@
         </nav>
       </header>
       <div class="headline">
-        <h3>We work with</h3>
-        <h2>Amazing Services</h2>
+        <h2>We work with <span>Amazing Services</span></h2>
       </div>
       <div class="services_wrap">
         <ul class="services_items">
@@ -90,15 +89,72 @@
         </ul>
       </div>
       <div class="headline">
-        <h3>Who we are</h3>
-        <h2>Meet our team</h2>
+        <h2>Who we are <span>Meet our team</span></h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat.
+        </p>
       </div>
-      <div class="headline-text">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat.
+      <div class="teams">
+        <!-- Team-item 1 -->
+        <div class="teams_items">
+          <div class="teams_image-box">
+            <img src="./img/Matthew Dix.png" alt="" />
+            <div class="teams_shadow-box">
+              <div class="social_media">
+                <a href="#"><i class="facebook-icon"></i></a>
+                <a href="#"><i class="twitter-icon"></i></a>
+                <a href="#"><i class="pinterest-icon"></i></a>
+                <a href="#"><i class="instagram-icon"></i></a>
+              </div>
+            </div>
+          </div>
+          <h3>Matthew Dix</h3>
+          <h4>Graphic Design</h4>
+        </div>
+        <!-- Team-item 2 -->
+        <div class="teams_items">
+          <div class="teams_image-box">
+            <img src="./img/Christopher Campbell.png" alt="" />
+            <div class="teams_shadow-box">
+              <div class="social_media">
+                <a href="#"><i class="facebook-icon"></i></a>
+                <a href="#"><i class="twitter-icon"></i></a>
+                <a href="#"><i class="pinterest-icon"></i></a>
+                <a href="#"><i class="instagram-icon"></i></a>
+              </div>
+            </div>
+          </div>
+          <h3>Christopher Campbell</h3>
+          <h4>Branding/UX design</h4>
+        </div>
+        <!-- Team-item 3 -->
+        <div class="teams_items">
+          <div class="teams_image-box">
+            <img src="./img/Michael Fertig.png" alt="" />
+            <div class="teams_shadow-box">
+              <div class="social_media">
+                <a href="#"><i class="facebook-icon"></i></a>
+                <a href="#"><i class="twitter-icon"></i></a>
+                <a href="#"><i class="pinterest-icon"></i></a>
+                <a href="#"><i class="instagram-icon"></i></a>
+              </div>
+            </div>
+          </div>
+          <h3>Michael Fertig</h3>
+          <h4>Developer</h4>
+        </div>
       </div>
+      <footer>
+        <hr>
+        <p>© 2016 MoGo free PSD template by <a href="#">Laaqiq</a></p>
+        <form action="#" method="GET">
+          <input type="text" placeholder="Your Email..." />
+          <input type="button" value="subscribe" />
+        </form>
+      </footer>
     </div>
   </body>
 </html>
