--- a/html-css/module-06/index.html
+++ b/html-css/module-06/index.html
@@ -28,7 +28,6 @@
       <div class="services_wrap">
         <ul class="services_items">
           <li class="services-item">
-            <img src="./img/ALARM.png" alt="" />
             <div class="services-item-text">
               <h3>Photography</h3>
               <p>
@@ -38,7 +37,6 @@
             </div>
           </li>
           <li class="services-item">
-            <img src="./img/LINE GRAPH.png" alt="" />
             <div class="services-item-text">
               <h3>Web Design</h3>
               <p>
@@ -48,7 +46,6 @@
             </div>
           </li>
           <li class="services-item">
-            <img src="./img/COMPUTER _ OK.png" alt="" />
             <div class="services-item-text">
               <h3>Creativity</h3>
               <p>
@@ -58,7 +55,6 @@
             </div>
           </li>
           <li class="services-item">
-            <img src="./img/BOOK 2.png" alt="" />
             <div class="services-item-text">
               <h3>seo</h3>
               <p>
@@ -68,7 +64,6 @@
             </div>
           </li>
           <li class="services-item">
-            <img src="./img/HOME.png" alt="" />
             <div class="services-item-text">
               <h3>Css/Html</h3>
               <p>
@@ -78,7 +73,6 @@
             </div>
           </li>
           <li class="services-item">
-            <img src="./img/IMAGE.png" alt="" />
             <div class="services-item-text">
               <h3>digital</h3>
               <p>
@@ -101,7 +95,7 @@
         <!-- Team-item 1 -->
         <div class="teams_items">
           <div class="teams_image-box">
-            <img src="./img/Matthew Dix.png" alt="" />
+            <img src="./img/Matthew_Dix.png" alt="" />
             <div class="teams_shadow-box">
               <div class="social_media">
                 <a href="#"><i class="facebook-icon"></i></a>
@@ -117,7 +111,7 @@
         <!-- Team-item 2 -->
         <div class="teams_items">
           <div class="teams_image-box">
-            <img src="./img/Christopher Campbell.png" alt="" />
+            <img src="./img/Christopher_Campbell.png" alt="" />
             <div class="teams_shadow-box">
               <div class="social_media">
                 <a href="#"><i class="facebook-icon"></i></a>
@@ -133,7 +127,7 @@
         <!-- Team-item 3 -->
         <div class="teams_items">
           <div class="teams_image-box">
-            <img src="./img/Michael Fertig.png" alt="" />
+            <img src="./img/Michael_Fertig.png" alt="" />
             <div class="teams_shadow-box">
               <div class="social_media">
                 <a href="#"><i class="facebook-icon"></i></a>
