--- a/html-css/module-07/index.html
+++ b/html-css/module-07/index.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./css/myreset.css" />
-    <link rel="stylesheet" href="./css/fonts.css">
-    <link rel="stylesheet" href="./css/style.css" />
-    <title>module-07</title>
-  </head>
-  <body>
-    <div class="container">
-      <header></header>
-      <footer></footer>
-    </div>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="./css/myreset.css" />
+  <link rel="stylesheet" href="./css/fonts.css" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <title>module-07</title>
+</head>
+
+<body>
+  <header class="container">
+    <nav class="navigation">
+      <div class="logo"><a href="#">Golden</a></div>
+      <ul class="menu">
+        <li class="menu-item"><a href="#">home</a></li>
+        <li class="menu-item"><a href="#">services</a></li>
+        <li class="menu-item"><a href="#">portfolio</a></li>
+        <li class="menu-item"><a href="#">about</a></li>
+        <li class="menu-item"><a href="#">contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <footer></footer>
+</body>
+
 </html>
