Added main content

--- a/html-css/module-07/index.html
+++ b/html-css/module-07/index.html
@@ -24,6 +24,35 @@
       </ul>
     </nav>
   </header>
+  <div class="container">
+    <div class="content_headline">
+      <h2>Services</h2>
+      <p>Proin iaculis purus consequat sem cure.</p>
+    </div>
+    <div class="services_wrap">
+      <div class="services_items">
+        <i class="Icon-Basket"></i>
+        <h3>E-Commerce</h3>
+        <p>Proin iaculis purus consequat sem cure
+          digni ssim. Donec porttitora entum suscipit
+          aenean rhoncus posuere odio in tincidunt.</p>
+      </div>
+      <div class="services_items">
+        <i class="Icon-Laptop"></i>
+        <h3>Responsive Web</h3>
+        <p>Proin iaculis purus consequat sem cure
+          digni ssim. Donec porttitora entum suscipit
+          aenean rhoncus posuere odio in tincidunt.</p>
+      </div>
+      <div class="services_items">
+        <i class="Icon-Locked"></i>
+        <h3>Web Security</h3>
+        <p>Proin iaculis purus consequat sem cure
+          digni ssim. Donec porttitora entum suscipit
+          aenean rhoncus posuere odio in tincidunt.</p>
+      </div>
+    </div>
+  </div>
   <footer></footer>
 </body>
 
