--- a/html-css/module-07/index.html
+++ b/html-css/module-07/index.html
@@ -53,7 +53,28 @@
       </div>
     </div>
   </div>
-  <footer></footer>
+  <footer>
+    <div class="container">
+      <div class="content_headline">
+        <h2>Contact us</h2>
+        <p>Proin iaculis purus consequat sem cure.</p>
+      </div>
+      <form action="" method="get">
+        <div class="text-form">
+          <div class="text-form-r">
+            <input class="form-text1" type="text" name="name" placeholder="your name *" required>
+            <input class="form-text1" type="email" name="email" placeholder="your e-mail *" required>
+            <input class="form-text1" type="text" name="subject" placeholder="subject">
+          </div>
+          <textarea class="form-text2" name="message" id="form-message" placeholder="your message *"
+            required></textarea>
+        </div>
+        <div class="form-button">
+          <input class="btn-submit" type="submit" value="Send Message">
+        </div>
+      </form>
+    </div>
+  </footer>
 </body>
 
 </html>
