--- a/html-css/module-07/index.html
+++ b/html-css/module-07/index.html
@@ -59,7 +59,7 @@
         <h2>Contact us</h2>
         <p>Proin iaculis purus consequat sem cure.</p>
       </div>
-      <form action="" method="get">
+      <form action="#" method="get">
         <div class="text-form">
           <div class="text-form-r">
             <input class="form-text1" type="text" name="name" placeholder="your name *" required>
