Add content and styles

--- a/html-css/module-08/index.html
+++ b/html-css/module-08/index.html
@@ -1,28 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <link rel="stylesheet" href="./css/myreset.css" />
-        <link rel="stylesheet" href="./css/style.css" />
-        <title>module-08</title>
-    </head>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./css/myreset.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>module-08</title>
+</head>
 
-    <body>
-        <header class="container">
-            <nav class="navigation">
-                <ul class="menu">
-                    <li class="menu-item"><a href="#">Log in</a></li>
-                    <li class="menu-item"><a href="#">Sign up</a></li>
-                </ul>
-                <div class="logo"><a href="#">URLAUBSGLÜCK</a></div>
-            </nav>
-            <h1>Share your holiday dreams </h1>
-            <h2>And find the perfect partner to fullfill it</h2>
-            <a href="#" class="button">Find your holiday partner</a>
-        </header>
-    </body>
+<body>
+    <header class="container">
+        <nav class="navigation">
+            <ul class="menu">
+                <li class="menu-item"><a href="#">Log in</a></li>
+                <li class="menu-item"><a href="#">Sign up</a></li>
+            </ul>
+            <div class="logo"><a href="#">URLAUBSGLÜCK</a></div>
+        </nav>
+        <h2>Share your holiday dreams </h2>
+        <h3>And find the perfect partner to fullfill it</h3>
+        <a href="#" class="button">Find your holiday partner</a>
+    </header>
+    <div class="container">
+        <div class="content">
+            <h2>Meet a partner for your best holiday</h2>
+            <ul class="partners_wrap">
+                <li class="partners_wrap-item">
+                    <img src="./img/per1.png" alt="">
+                    <h3>Bradley Hunter</h3>
+                    <h4>Based in Chicago. I love playing tennis and loud music.</h4>
+                </li>
+            </ul>
+        </div>
+    </div>
+</body>
 
 </html>
