--- a/html-css/module-08/index.html
+++ b/html-css/module-08/index.html
@@ -21,18 +21,43 @@
         </nav>
         <h2>Share your holiday dreams </h2>
         <h3>And find the perfect partner to fullfill it</h3>
-        <a href="#" class="button">Find your holiday partner</a>
+        <a href="#" class="button1">Find your holiday partner</a>
     </header>
     <div class="container">
         <div class="content">
             <h2>Meet a partner for your best holiday</h2>
             <ul class="partners_wrap">
                 <li class="partners_wrap-item">
-                    <img src="./img/per1.png" alt="">
-                    <h3>Bradley Hunter</h3>
+                    <a href="#" class="person_img icon1">
+                        <img src="./img/per1.png" alt="">
+                    </a>
+                    <h3><a href="#">Bradley Hunter</a></h3>
+                    <h4>Based in Chicago. I love playing tennis and loud music.</h4>
+                </li>
+                <li class="partners_wrap-item">
+                    <a href="#" class="person_img icon2">
+                        <img src="./img/per2.png" alt="">
+                    </a>
+                    <h3><a href="#">Lucas Marsha</a></h3>
+                    <h4>I get my inspiration from nature and objects around me. I have a passion to colours, typography
+                        and skateboards.</h4>
+                </li>
+                <li class="partners_wrap-item">
+                    <a href="#" class="person_img icon3">
+                        <img src="./img/per3.png" alt="">
+                    </a>
+                    <h3><a href="#">Heather Walker</a></h3>
+                    <h4>I'm a happy person that loves cats and climbing on mountains.</h4>
+                </li>
+                <li class="partners_wrap-item">
+                    <a href="#" class="person_img icon4">
+                        <img src="./img/per4.png" alt="">
+                    </a>
+                    <h3><a href="#">Bradley Hunter</a></h3>
                     <h4>Based in Chicago. I love playing tennis and loud music.</h4>
                 </li>
             </ul>
+            <a href="#" class="button2">See other partners</a>
         </div>
     </div>
 </body>
