Added content, styles and fixes

--- a/html-css/module-08/index.html
+++ b/html-css/module-08/index.html
@@ -11,17 +11,19 @@
 </head>
 
 <body>
-    <header class="container">
-        <nav class="navigation">
-            <ul class="menu">
-                <li class="menu-item"><a href="#">Log in</a></li>
-                <li class="menu-item"><a href="#">Sign up</a></li>
-            </ul>
-            <div class="logo"><a href="#">URLAUBSGLÜCK</a></div>
-        </nav>
-        <h2>Share your holiday dreams </h2>
-        <h3>And find the perfect partner to fullfill it</h3>
-        <a href="#" class="button1">Find your holiday partner</a>
+    <header>
+        <div class="container">
+            <nav class="navigation">
+                <ul class="menu">
+                    <li class="menu-item"><a href="#">Log in</a></li>
+                    <li class="menu-item"><a href="#">Sign up</a></li>
+                </ul>
+                <div class="logo"><a href="#">URLAUBSGLÜCK</a></div>
+            </nav>
+            <h2>Share your holiday dreams </h2>
+            <h3>And find the perfect partner to fullfill it</h3>
+            <a href="#" class="button1">Find your holiday partner</a>
+        </div>
     </header>
     <div class="container">
         <div class="content">
