--- a/html-css/module-09/index.html
+++ b/html-css/module-09/index.html
@@ -11,11 +11,82 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <link rel="stylesheet" href="./css/myreset.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>module-09</title>
 </head>
 
 <body>
+    <header>
+        <div class="container">
+            <nav>
+                <div class="row navigation">
+                    <div class="col-12 col-md-6">
+                        <ul class="menu">
+                            <li class="menu-item"><a href="#">Log in</a></li>
+                            <li class="menu-item"><a href="#">Sign up</a></li>
+                        </ul>
+                    </div>
 
+                    <div class="logo col-12 col-md-6"><a href="#">URLAUBSGLÜCK</a></div>
+                </div>
+            </nav>
+            <div class="slider-text">
+                <h1>Share your holiday dreams</h1>
+                <p>And find the perfect partner to fullfill it</p>
+                <a href="#" class="btn-partner1">Find your holiday partner</a>
+            </div>
+        </div>
+    </header>
+
+    <article>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="content col-12 col-md-8 col-xl-12">
+                    <h2>Meet a partner for your best holiday</h2>
+                    <div class="row partners_wrap">
+                        <div class="col-12 col-md-6 col-xl-2">
+                            <div class="partners_wrap-item">
+                                <a href="#" class="person_img icon1">
+                                    <img src="./img/per1.png" alt="">
+                                </a>
+                                <h3><a href="#">Bradley Hunter</a></h3>
+                                <p>Based in Chicago. I love playing tennis and loud music.</p>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6 col-xl-2">
+                            <div class="partners_wrap-item">
+                                <a href="#" class="person_img icon2">
+                                    <img src="./img/per2.png" alt="">
+                                </a>
+                                <h3><a href="#">Lucas Marsha</a></h3>
+                                <p>I get my inspiration from nature and objects around me. I have a passion to colours,
+                                    typography
+                                    and skateboards.</p>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6 col-xl-2">
+                            <div class="partners_wrap-item">
+                                <a href="#" class="person_img icon3">
+                                    <img src="./img/per3.png" alt="">
+                                </a>
+                                <h3><a href="#">Heather Walker</a></h3>
+                                <p>I'm a happy person that loves cats and cdivmbing on mountains.</p>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6 col-xl-2">
+                            <div class="partners_wrap-item">
+                                <a href="#" class="person_img icon4">
+                                    <img src="./img/per4.png" alt="">
+                                </a>
+                                <h3><a href="#">Bradley Hunter</a></h3>
+                                <p>Based in Chicago. I love playing tennis and loud music.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <a href="#" class="button2">See other partners</a>
+                </div>
+            </div>
+    </article>
 
 
     <!-- Optional JavaScript -->
