--- a/html-css/module-09/index.html
+++ b/html-css/module-09/index.html
@@ -86,6 +86,7 @@
                     <a href="#" class="button2">See other partners</a>
                 </div>
             </div>
+        </div>
     </article>
 
 
